# xet

./: .bump  .gitignore  .pre-commit-config.yaml  .xet  CONTRIBUTING.md  README.md  bump  bump.cfg  install.sh  pyproject.toml  slice.ipynb  test.cfg
.github/workflows/: commit-test.yml  python-publish.yml
bashbump/: README.md
bump/: bump
bumpy/: bump
tests/: test_xet.py
tests/data/: test.txt  test_numbers.txt
xet/: xet  xet.py
