[tool.poetry]
name = "xet"
version = "0.4.0"
description = "CLI Tool for quickly updating values across your project/machine."
readme = "README.md"
authors = ["Art Irsiegler"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
fabric = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
