[project]
name = "xet"
version = "1.2.0"

[tool.poetry]
name = "xet"
version = "1.2.0"
description = "CLI Tool for quickly updating values across your project/machine."
readme = "README.md"
authors = ["Art"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
fabric = "^3.2.2"
colorama = "^0.4.6"
diff-match-patch = "20241021"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "noinit: does not auto-init .xet in tests",
    "serial",
]

[project.scripts]
xet = "xet.cli:main"
